src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_groups__concat_idents! (parse it_fails_on_empty_bracket).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::parse::<Bracket<P<()>>>(q.clone())"
---
Err(
    Error(
        "Expected '[ ... ]'",
    ),
)
