src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_groups__concat_idents! (parse it_matches_contentful_grouped_bracket).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::parse::<Bracket<Ident>>(q.clone())"
---
Ok(
    Bracket(
        Ident(
            hello,
        ),
        Span,
    ),
)
