src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_groups__concat_idents! (parse it_matches_simple_grouped_brace).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::parse::<Brace<P<()>>>(q.clone())"
---
Ok(
    Brace(
        P(
            (),
        ),
        Span,
    ),
)
