src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_groups__concat_idents! (parse it_matches_simple_grouped_paren).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::parse::<Paren<()>>(q.clone())"
---
Ok(
    Paren(
        (),
        Span,
    ),
)
